applied Zefklop's cmake patch (without much testing) [ 2085249 ] cmake for unix
svn-id: r5246

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.4.4)
 PROJECT(GemRB)
 
 IF( NOT PLUGIN_INSTALL_DIR )
- SET( PLUGIN_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/Plugins )
+ SET( PLUGIN_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/plugins )
 ENDIF( NOT PLUGIN_INSTALL_DIR )
 
 IF( NOT OVERRIDE_INSTALL_DIR )
@@ -13,6 +13,15 @@ IF( NOT GUISCRIPTS_INSTALL_DIR )
  SET( GUISCRIPTS_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/GUIScripts )
 ENDIF( NOT GUISCRIPTS_INSTALL_DIR )
 
+MESSAGE(STATUS "Looking for Python libraries")
+INCLUDE(FindPythonLibs)
+IF(PYTHON_LIBRARY)
+ MESSAGE(STATUS "Python Libraries Found")
+ELSE(PYTHON_LIBRARY)
+ MESSAGE(FATAL_ERROR "Unable to find Python development libraries. Please get it from www.python.org")
+ENDIF(PYTHON_LIBRARY)
+
+MESSAGE(STATUS "Looking for openAL libraries")
 INCLUDE(FindOpenAL)
 IF(OPENAL_FOUND)
  MESSAGE(STATUS "openal found")
@@ -39,5 +48,33 @@ IF(PNG_FOUND)
 ELSE(PNG_FOUND)
  MESSAGE( STATUS "WARNING : GemRB will be built without any PNG support. Get it from www.libpng.org" )
 ENDIF(PNG_FOUND)
+
+IF(UNIX)
+ MESSAGE(STATUS "Looking for dl library")
+ FIND_LIBRARY(DLD_LIBRARY_PATH dl dld)
+ IF(DLD_LIBRARY_PATH)
+  MESSAGE(STATUS "dl library found")
+ ELSE(DLD_LIBRARY_PATH)
+  MESSAGE(FATAL_ERROR "dl library not found")
+ ENDIF(DLD_LIBRARY_PATH)
+ENDIF(UNIX)
+
+MESSAGE(STATUS "Looking for Ogg Vorbis support")
+FIND_LIBRARY(VORBIS_LIBRARY vorbisfile)
+
+ADD_DEFINITIONS("-DHAVE_CONFIG_H")
+
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
+
+#Platform checks
+INCLUDE (CheckTypeSize)
+CHECK_TYPE_SIZE("int" SIZEOF_INT)
+CHECK_TYPE_SIZE("long int" SIZEOF_LONG_INT)
+
+INCLUDE (CheckFunctionExists)
+CHECK_FUNCTION_EXISTS("snprintf" HAVE_SNPRINTF)
+
+CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/cmake_config.h.in ${CMAKE_CURRENT_BINA
+RY_DIR}/config.h)
 
 ADD_SUBDIRECTORY( gemrb ) 
