--- a/gemrb/CMakeLists.txt
+++ b/gemrb/CMakeLists.txt
@@ -4,7 +4,11 @@ ADD_SUBDIRECTORY( GUIScripts )
 
 ADD_EXECUTABLE(gemrb GemRB.cpp )
 
-TARGET_LINK_LIBRARIES(gemrb gemrb_core )
+IF(UNIX)
+ TARGET_LINK_LIBRARIES(gemrb gemrb_core ${DLD_LIBRARY_PATH})
+ELSE(UNIX)
+ TARGET_LINK_LIBRARIES(gemrb gemrb_core)
+ENDIF(UNIX)
 
 INSTALL( TARGETS gemrb DESTINATION ${CMAKE_INSTALL_PREFIX} )
 INSTALL( FILES GemRB.cfg.sample GemRB.cfg.subdir.sample DESTINATION ${CMAKE_INSTALL_PREFIX} )
