--- a/gemrb/plugins/Core/CMakeLists.txt
+++ b/gemrb/plugins/Core/CMakeLists.txt
@@ -6,5 +6,4 @@ FILE(GLOB gemrb_core_LIB_SRCS "*.cpp")
 
 ADD_LIBRARY(gemrb_core SHARED ${gemrb_core_LIB_SRCS} )
 
-INSTALL( TARGETS gemrb_core RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX} 
-                            LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib )
+INSTALL( TARGETS gemrb_core DESTINATION ${CMAKE_INSTALL_PREFIX} )
