fixed a hard wrap causing a syntax error in the toplevel cmake file
svn-id: r5363

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,7 +74,6 @@ CHECK_TYPE_SIZE("long int" SIZEOF_LONG_INT)
 INCLUDE (CheckFunctionExists)
 CHECK_FUNCTION_EXISTS("snprintf" HAVE_SNPRINTF)
 
-CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/cmake_config.h.in ${CMAKE_CURRENT_BINA
-RY_DIR}/config.h)
+CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/cmake_config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
 ADD_SUBDIRECTORY( gemrb ) 
