[ 2085249 ] cmake for unix revisited
svn-id: r5364

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,18 @@ CHECK_TYPE_SIZE("long int" SIZEOF_LONG_INT)
 INCLUDE (CheckFunctionExists)
 CHECK_FUNCTION_EXISTS("snprintf" HAVE_SNPRINTF)
 
+INCLUDE (CheckCXXSourceCompiles)
+CHECK_CXX_SOURCE_COMPILES("typedef void *(* voidvoid)(void);
+
+void *object = 0;
+voidvoid function;
+function = (voidvoid) object;
+", PERMITS_OBJECT_TO_FUNCTION_CAST)
+
+IF( NOT PERMITS_OBJECT_TO_FUNCTION_CAST )
+ SET(HAVE_FORBIDDEN_OBJECT_TO_FUNCTION_CAST 1)
+ENDIF( NOT PERMITS_OBJECT_TO_FUNCTION_CAST )
+
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/cmake_config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
 ADD_SUBDIRECTORY( gemrb ) 
