--- a/gemrb/CMakeLists.txt
+++ b/gemrb/CMakeLists.txt
@@ -3,12 +3,12 @@ ADD_SUBDIRECTORY( override )
 ADD_SUBDIRECTORY( GUIScripts )
 
 ADD_EXECUTABLE(gemrb GemRB.cpp )
-
-IF(UNIX)
- TARGET_LINK_LIBRARIES(gemrb gemrb_core ${DLD_LIBRARY_PATH})
-ELSE(UNIX)
+IF(WIN32)
  TARGET_LINK_LIBRARIES(gemrb gemrb_core)
-ENDIF(UNIX)
+ELSE(WIN32)
+ TARGET_LINK_LIBRARIES(gemrb gemrb_core ${DLD_LIBRARY_PATH})
+ SET_TARGET_PROPERTIES(gemrb PROPERTIES INSTALL_RPATH ${PLUGIN_INSTALL_DIR})
+ENDIF(WIN32)
 
-INSTALL( TARGETS gemrb DESTINATION ${CMAKE_INSTALL_PREFIX} )
+INSTALL( TARGETS gemrb DESTINATION ${CMAKE_INSTALL_PREFIX})
 INSTALL( FILES GemRB.cfg.sample GemRB.cfg.subdir.sample DESTINATION ${CMAKE_INSTALL_PREFIX} )
