--- a/gemrb/plugins/ACMImporter/CMakeLists.txt
+++ b/gemrb/plugins/ACMImporter/CMakeLists.txt
@@ -1,9 +1,9 @@
-INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIR} ${SDL_INCLUDE_DIR} )
+INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR} )
 
 FILE( GLOB ACMImporter_files *.cpp )
 
-ADD_LIBRARY(ACMImporter MODULE ${ACMImporter_files})
+ADD_GEMRB_PLUGIN (ACMImporter ${ACMImporter_files})
 
-TARGET_LINK_LIBRARIES(ACMImporter gemrb_core ${OPENAL_LIBRARY} ${SDL_LIBRARY})
+TARGET_LINK_LIBRARIES(ACMImporter ${SDL_LIBRARY})
 
 INSTALL( TARGETS ACMImporter DESTINATION ${PLUGIN_INSTALL_DIR} )
