--- a/gemrb/plugins/GUIScript/CMakeLists.txt
+++ b/gemrb/plugins/GUIScript/CMakeLists.txt
@@ -1,7 +1,7 @@
 INCLUDE(FindPythonLibs)
 
 INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
-ADD_LIBRARY(GUIScript MODULE GUIScript.cpp GUIScriptCD.cpp GUIScriptEngine.cpp)
-TARGET_LINK_LIBRARIES( GUIScript gemrb_core ${PYTHON_LIBRARIES} )
+ADD_GEMRB_PLUGIN (GUIScript GUIScript.cpp GUIScriptCD.cpp GUIScriptEngine.cpp)
+TARGET_LINK_LIBRARIES( GUIScript ${PYTHON_LIBRARIES} )
 
 INSTALL( TARGETS GUIScript DESTINATION ${PLUGIN_INSTALL_DIR} )
