--- a/gemrb/plugins/NullSound/CMakeLists.txt
+++ b/gemrb/plugins/NullSound/CMakeLists.txt
@@ -1,4 +1,3 @@
-ADD_LIBRARY(NullSound MODULE NullSnd.cpp NullSound.cpp NullSoundCD.cpp )
-TARGET_LINK_LIBRARIES(NullSound gemrb_core)
+ADD_GEMRB_PLUGIN (NullSound NullSnd.cpp NullSound.cpp NullSoundCD.cpp )
 
 INSTALL( TARGETS NullSound DESTINATION ${PLUGIN_INSTALL_DIR} )
