--- a/gemrb/plugins/OpenALAudio/CMakeLists.txt
+++ b/gemrb/plugins/OpenALAudio/CMakeLists.txt
@@ -1,9 +1,8 @@
+#Don't build if openal is not there
+IF(OPENAL_FOUND)
 INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIR} ${SDL_INCLUDE_DIR} )
-
 FILE( GLOB OpenALAudio_files *.cpp )
-
-ADD_LIBRARY(OpenALAudio MODULE ${OpenALAudio_files} )
-
-TARGET_LINK_LIBRARIES(OpenALAudio gemrb_core ${OPENAL_LIBRARY} ${SDL_LIBRARY} )
-
+ADD_GEMRB_PLUGIN (OpenALAudio ${OpenALAudio_files} )
+TARGET_LINK_LIBRARIES(OpenALAudio ${OPENAL_LIBRARY} ${SDL_LIBRARY} )
 INSTALL( TARGETS OpenALAudio DESTINATION ${PLUGIN_INSTALL_DIR} )
+ENDIF(OPENAL_FOUND)
