--- a/gemrb/plugins/SDLVideo/CMakeLists.txt
+++ b/gemrb/plugins/SDLVideo/CMakeLists.txt
@@ -1,6 +1,6 @@
 INCLUDE_DIRECTORIES( ${SDL_INCLUDE_DIR} )
 
-ADD_LIBRARY(SDLVideo MODULE SDLVideo.cpp SDLVideoDC.cpp SDLVideoDriver.cpp SDLVideoDriver.inl)
-TARGET_LINK_LIBRARIES( SDLVideo gemrb_core ${SDL_LIBRARY} )
+ADD_GEMRB_PLUGIN (SDLVideo SDLVideo.cpp SDLVideoDC.cpp SDLVideoDriver.cpp)
+TARGET_LINK_LIBRARIES( SDLVideo ${SDL_LIBRARY} )
 
 INSTALL( TARGETS SDLVideo DESTINATION ${PLUGIN_INSTALL_DIR} )
