--- a/gemrb/plugins/TLKImporter/CMakeLists.txt
+++ b/gemrb/plugins/TLKImporter/CMakeLists.txt
@@ -1,4 +1,3 @@
-ADD_LIBRARY(TLKImporter MODULE TLKImp.cpp TLKImpCD.cpp TLKImporter.cpp TlkOverride.cpp)
-TARGET_LINK_LIBRARIES( TLKImporter gemrb_core )
+ADD_GEMRB_PLUGIN (TLKImporter TLKImp.cpp TLKImpCD.cpp TLKImporter.cpp TlkOverride.cpp)
 
 INSTALL( TARGETS TLKImporter DESTINATION ${PLUGIN_INSTALL_DIR} )
