--- a/gemrb/plugins/ZLibMgr/CMakeLists.txt
+++ b/gemrb/plugins/ZLibMgr/CMakeLists.txt
@@ -1,4 +1,4 @@
-ADD_LIBRARY(ZLibMgr MODULE ZLibManager.cpp ZLibMgr.cpp ZLibMgrDesc.cpp )
-TARGET_LINK_LIBRARIES( ZLibMgr gemrb_core ${ZLIB_LIBRARY} )
+ADD_GEMRB_PLUGIN (ZLibMgr ZLibManager.cpp ZLibMgr.cpp ZLibMgrDesc.cpp )
+TARGET_LINK_LIBRARIES( ZLibMgr ${ZLIB_LIBRARY} )
 
 INSTALL(TARGETS ZLibMgr DESTINATION ${PLUGIN_INSTALL_DIR} )
