--- a/gemrb/plugins/Core/CMakeLists.txt
+++ b/gemrb/plugins/Core/CMakeLists.txt
@@ -6,4 +6,8 @@ FILE(GLOB gemrb_core_LIB_SRCS "*.cpp")
 
 ADD_LIBRARY(gemrb_core SHARED ${gemrb_core_LIB_SRCS} )
 
-INSTALL( TARGETS gemrb_core DESTINATION ${CMAKE_INSTALL_PREFIX} )
+IF(WIN32)
+ INSTALL(TARGETS gemrb_core RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
+ELSE(WIN32)
+ INSTALL(TARGETS gemrb_core LIBRARY DESTINATION ${PLUGIN_INSTALL_DIR})
+ENDIF(WIN32)
