--- a/gemrb/plugins/PNGImporter/CMakeLists.txt
+++ b/gemrb/plugins/PNGImporter/CMakeLists.txt
@@ -1,7 +1,6 @@
 IF(PNG_FOUND)
 INCLUDE_DIRECTORIES( ${PNG_INCLUDE_DIR} )
-ADD_LIBRARY(PNGImporter MODULE PNGImp.cpp PNGImpCD.cpp PNGImporter.cpp)
-TARGET_LINK_LIBRARIES( PNGImporter gemrb_core ${PNG_LIBRARY} )
-ENDIF( PNG_FOUND )
-
+ADD_GEMRB_PLUGIN (PNGImporter PNGImp.cpp PNGImpCD.cpp PNGImporter.cpp)
+TARGET_LINK_LIBRARIES( PNGImporter ${PNG_LIBRARY} )
 INSTALL( TARGETS PNGImporter DESTINATION ${PLUGIN_INSTALL_DIR} )
+ENDIF( PNG_FOUND )
