cmake: another patch by zefklop for better vorbis detection
svn-id: r5393

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,6 +90,10 @@ IF( NOT PERMITS_OBJECT_TO_FUNCTION_CAST )
 ENDIF( NOT PERMITS_OBJECT_TO_FUNCTION_CAST )
 ENDIF(NOT WIN32)
 
+IF(VORBIS_LIBRARY)
+ SET(HAS_VORBIS_SUPPORT 1)
+ENDIF(VORBIS_LIBRARY)
+
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/cmake_config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
 #Plugin addtion macro
