--- a/gemrb/plugins/ACMImporter/CMakeLists.txt
+++ b/gemrb/plugins/ACMImporter/CMakeLists.txt
@@ -4,6 +4,6 @@ FILE( GLOB ACMImporter_files *.cpp )
 
 ADD_GEMRB_PLUGIN (ACMImporter ${ACMImporter_files})
 
-TARGET_LINK_LIBRARIES(ACMImporter ${SDL_LIBRARY})
+TARGET_LINK_LIBRARIES(ACMImporter ${VORBIS_LIBRARY})
 
 INSTALL( TARGETS ACMImporter DESTINATION ${PLUGIN_INSTALL_DIR} )
