cmake: install the man page
svn-id: r5509

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,10 @@ IF( NOT GUISCRIPTS_INSTALL_DIR )
  SET( GUISCRIPTS_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/GUIScripts )
 ENDIF( NOT GUISCRIPTS_INSTALL_DIR )
 
+IF( NOT MANPAGE_INSTALL_DIR )
+ SET( MANPAGE_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/share/man/man6 )
+ENDIF( NOT MANPAGE_INSTALL_DIR )
+
 MESSAGE(STATUS "Looking for Python libraries")
 INCLUDE(FindPythonLibs)
 IF(PYTHON_LIBRARY)
@@ -105,3 +109,4 @@ ENDIF(WIN32)
 ENDMACRO(ADD_GEMRB_PLUGIN)
 
 ADD_SUBDIRECTORY( gemrb ) 
+INSTALL( FILES gemrb.6 DESTINATION ${MANPAGE_INSTALL_DIR} )
