--- a/configure.in
+++ b/configure.in
@@ -56,10 +56,10 @@ fi
 
 AC_ARG_ENABLE(subdirs, AS_HELP_STRING(--disable-subdirs,Install plugins and data directly to LIBDIR and DATADIR), gemrb_use_subdirs=$enableval, gemrb_use_subdirs=yes)
 if test "x$gemrb_use_subdirs" = "xno" ; then
-  plugindir=$libdir
+  plugindir=$libdir/plugins
   moddir=$datadir
 else
-  plugindir=$libdir/gemrb
+  plugindir=$libdir/gemrb/plugins
   moddir=$datadir/gemrb
 fi
 
