iwd: set the scrolling cursor bam
svn-id: r5711

--- a/gemrb/override/iwd/gemrb.ini
+++ b/gemrb/override/iwd/gemrb.ini
@@ -25,6 +25,9 @@
 ; Bitmap resource for cursors
 CursorBAM = CAROT
 
+; Bitmap resource for scroll cursor arrow
+ScrollCursorBAM = CURSARW
+
 ; Bitmap resource for dialog buttons font
 ButtonFont = STONESML
 
@@ -104,4 +107,3 @@ Letter28 = 219,251
 Letter29 = 220,252
 Letter30 = 221,253
 Letter31 = 222,254
-
