GUIScripts/how: begone simulacrum
svn-id: r5718

--- a/gemrb/GUIScripts/Makefile.am
+++ b/gemrb/GUIScripts/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = bg1 bg2 iwd iwd2 how pst test1
+SUBDIRS = bg1 bg2 iwd iwd2 pst test1
 
 guiscript_DATA = *.py
 guiscriptdir = $(moddir)/GUIScripts/
