Fix ogg vorbis missing for cmake build system²
svn-id: r5755

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,8 @@ ENDIF(NOT WIN32)
 
 IF(VORBIS_LIBRARY)
  SET(HAS_VORBIS_SUPPORT 1)
+ELSE(VORBIS_LIBRARY)
+ SET(VORBIS_LIBRARY "")
 ENDIF(VORBIS_LIBRARY)
 
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/cmake_config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
