Set -Werror and -Wall on cmake build system so I don't break build anymore :-)
svn-id: r5772

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,10 @@ IF( NOT MANPAGE_INSTALL_DIR )
  SET( MANPAGE_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/share/man/man6 )
 ENDIF( NOT MANPAGE_INSTALL_DIR )
 
+IF(CMAKE_COMPILER_IS_GNUCXX)
+ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
+ENDIF(CMAKE_COMPILE_IS_GNUCXX)
+
 MESSAGE(STATUS "Looking for Python libraries")
 INCLUDE(FindPythonLibs)
 IF(PYTHON_LIBRARY)
