--- a/gemrb/override/iwd/Makefile.am
+++ b/gemrb/override/iwd/Makefile.am
@@ -1,3 +1,3 @@
-iwdoverride_DATA = *.2da *.bmp *.ini *.chu *.ids
+iwdoverride_DATA = *.2da *.bmp *.ini *.chu *.ids *.spl
 iwdoverridedir = $(moddir)/override/iwd/
-EXTRA_DIST = *.2da *.bmp *.ini *.chu *.ids
+EXTRA_DIST = *.2da *.bmp *.ini *.chu *.ids *.spl
