--- a/gemrb/override/iwd2/Makefile.am
+++ b/gemrb/override/iwd2/Makefile.am
@@ -1,3 +1,3 @@
-iwd2override_DATA = *.2da *.ini *.chu *.ids
+iwd2override_DATA = *.2da *.ini *.chu *.ids *.spl
 iwd2overridedir = $(moddir)/override/iwd2/
-EXTRA_DIST = *.2da *.ini *.chu *.ids
+EXTRA_DIST = *.2da *.ini *.chu *.ids *.spl
