--- a/gemrb/override/pst/Makefile.am
+++ b/gemrb/override/pst/Makefile.am
@@ -1,3 +1,3 @@
-pstoverride_DATA = *.2da *.bmp *.ini *.chu *.ids *.bcs
+pstoverride_DATA = *.2da *.bmp *.ini *.chu *.ids *.bcs *.spl
 pstoverridedir = $(moddir)/override/pst/
-EXTRA_DIST = *.2da *.bmp *.ini *.chu *.ids *.bcs
+EXTRA_DIST = *.2da *.bmp *.ini *.chu *.ids *.bcs *.spl
