cmake : better gemrb overrides installation.
svn-id: r5801

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ ENDIF( NOT MANPAGE_INSTALL_DIR )
 
 IF(CMAKE_COMPILER_IS_GNUCXX)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
-ENDIF(CMAKE_COMPILE_IS_GNUCXX)
+ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
 MESSAGE(STATUS "Looking for Python libraries")
 INCLUDE(FindPythonLibs)
@@ -113,6 +113,12 @@ IF(WIN32)
  TARGET_LINK_LIBRARIES(${plugin_name} gemrb_core)
 ENDIF(WIN32)
 ENDMACRO(ADD_GEMRB_PLUGIN)
+
+#gemrb overrides macro
+MACRO(ADD_GEMRB_OVERRIDE game_name)
+FILE( GLOB FILES_TO_INSTALL *.2da *.bmp *.ini *.chu *.ids *.bcs *.vvc *.mos *.spl *.wav )
+INSTALL( FILES ${FILES_TO_INSTALL} DESTINATION ${OVERRIDE_INSTALL_DIR}/${game_name} )
+ENDMACRO(ADD_GEMRB_OVERRIDE )
 
 ADD_SUBDIRECTORY( gemrb ) 
 INSTALL( FILES gemrb.6 DESTINATION ${MANPAGE_INSTALL_DIR} )
