--- a/gemrb/override/bg2/CMakeLists.txt
+++ b/gemrb/override/bg2/CMakeLists.txt
@@ -1,3 +1,1 @@
-FILE( GLOB FILES_TO_INSTALL *.2da *.bmp *.ini *.chu *.ids *.vvc)
-
-INSTALL( FILES ${FILES_TO_INSTALL} DESTINATION ${OVERRIDE_INSTALL_DIR}/bg2 )
+ADD_GEMRB_OVERRIDE (bg2)
