--- a/gemrb/override/iwd2/CMakeLists.txt
+++ b/gemrb/override/iwd2/CMakeLists.txt
@@ -1,3 +1,1 @@
-FILE( GLOB FILES_TO_INSTALL *.2da *.bmp *.ini *.chu *.ids )
-
-INSTALL( FILES ${FILES_TO_INSTALL} DESTINATION ${OVERRIDE_INSTALL_DIR}/iwd2 )
+ADD_GEMRB_OVERRIDE (iwd2)
