--- a/gemrb/override/pst/CMakeLists.txt
+++ b/gemrb/override/pst/CMakeLists.txt
@@ -1,3 +1,1 @@
-FILE( GLOB FILES_TO_INSTALL *.2da *.bmp *.ini *.chu *.ids *.bcs )
-
-INSTALL( FILES ${FILES_TO_INSTALL} DESTINATION ${OVERRIDE_INSTALL_DIR}/pst )
+ADD_GEMRB_OVERRIDE (pst)
