--- a/gemrb/override/test1/CMakeLists.txt
+++ b/gemrb/override/test1/CMakeLists.txt
@@ -1,3 +1,1 @@
-FILE( GLOB FILES_TO_INSTALL *.2da *.bmp *.ini *.chu *.ids *.wav )
-
-INSTALL( FILES ${FILES_TO_INSTALL} DESTINATION ${OVERRIDE_INSTALL_DIR}/test1 )
+ADD_GEMRB_OVERRIDE (test1)
