--- a/gemrb/plugins/MVEPlayer/CMakeLists.txt
+++ b/gemrb/plugins/MVEPlayer/CMakeLists.txt
@@ -1,3 +1,3 @@
-ADD_GEMRB_PLUGIN ( MVEPlayer decoder16.cpp decoder8.cpp mve_audio.cpp mve_play.cpp mvelib.cpp MVEPlay.cpp MVEPlayer.cpp MVEPlayerDesc.cpp )
+ADD_GEMRB_PLUGIN ( MVEPlayer mvevideodec8.cpp mvevideodec16.cpp mveaudiodec.cpp mve_player.cpp MVEPlay.cpp MVEPlayer.cpp MVEPlayerDesc.cpp )
 
 INSTALL( TARGETS MVEPlayer DESTINATION ${PLUGIN_INSTALL_DIR} )
