subtitles for ToB
svn-id: r6115

--- a/gemrb/override/bg2/gemrb.ini
+++ b/gemrb/override/bg2/gemrb.ini
@@ -31,6 +31,9 @@ ScrollCursorBAM = CURSARW
 ; Bitmap resource for dialog buttons font
 ButtonFont = STONESML
 
+; Font used to display subtitles (ToB)
+MovieFont = STONESML
+
 ; Font used to display tooltips
 TooltipFont = TOOLFONT
 
