added ReverseToHit = 1 to all non-iwd2 gemrb.ini files
svn-id: r6311

--- a/gemrb/override/bg1/gemrb.ini
+++ b/gemrb/override/bg1/gemrb.ini
@@ -62,6 +62,7 @@ HasEXPTABLE = 0
 SoundFolders = 0
 HasSongList = 0
 UpperButtonText = 1
+ReverseToHit = 1
 LowerLabelText = 1
 HasPartyINI = 0
 HasBeastsINI = 0
