--- a/gemrb/override/how/gemrb.ini
+++ b/gemrb/override/how/gemrb.ini
@@ -63,6 +63,7 @@ HasDescIcon = 0
 HasEXPTABLE = 1
 SoundFolders = 1
 HasSongList = 0
+ReverseToHit = 1
 UpperButtonText = 0
 LowerLabelText = 0
 HasPartyINI = 0
