--- a/gemrb/override/iwd/gemrb.ini
+++ b/gemrb/override/iwd/gemrb.ini
@@ -65,6 +65,7 @@ LowerLabelText = 0
 HasPartyINI = 0
 HasBeastsINI = 0
 ForceStereo = 0
+ReverseToHit = 1
 IWDMapDimensions = 1
 SmallFog = 0
 ReverseDoor = 0
