--- a/gemrb/override/pst/gemrb.ini
+++ b/gemrb/override/pst/gemrb.ini
@@ -59,6 +59,7 @@ HasEXPTABLE = 0
 SoundFolders = 0
 HasSongList = 0
 UpperButtonText = 0
+ReverseToHit = 1
 LowerLabelText = 0
 HasPartyINI = 0
 HasBeastsINI = 1
