--- a/gemrb/override/bg2/gemrb.ini
+++ b/gemrb/override/bg2/gemrb.ini
@@ -69,6 +69,7 @@ LowerLabelText = 0
 HasPartyINI = 0
 HasBeastsINI = 0
 ForceStereo = 0
+ReverseToHit = 1
 IWDMapDimensions = 0
 SmallFog = 0
 ReverseDoor = 0
