movie subtitle font in iwd
svn-id: r6483

--- a/gemrb/override/iwd/gemrb.ini
+++ b/gemrb/override/iwd/gemrb.ini
@@ -34,6 +34,9 @@ ButtonFont = STONESML
 ; Font used to display tooltips
 TooltipFont = TOOLFONT
 
+; Font used to display subtitles
+MovieFont = REALMS2
+
 ; Sprite displayed behind the tooltip text, if any
 TooltipBack = TOOLTIP
 
