Individual plugins might be skipped or bumped to the end. Untangled the mess in PluginMgr.cpp a bit, hopefully it did not break Windows
svn-id: r6686

--- a/gemrb/GemRB.cfg.sample
+++ b/gemrb/GemRB.cfg.sample
@@ -73,6 +73,10 @@ TooltipDelay=500
 #                                                   #
 #####################################################
 
+# Load NullSound driver only if OpenALAudio driver failed
+DelayPlugin=libNullSound.so
+DelayPlugin=libNullSound.dll
+
 # Volume of ambient sounds
 VolumeAmbients = 100
 
