--- a/gemrb/override/bg1/Makefile.am
+++ b/gemrb/override/bg1/Makefile.am
@@ -1,3 +1,3 @@
-bg1override_DATA = *.2da *.bmp *.ini *.chu *.ids *.spl
+bg1override_DATA = *.2da *.bmp *.ini *.chu *.ids *.spl *.pro
 bg1overridedir = $(moddir)/override/bg1/
-EXTRA_DIST = *.2da *.bmp *.ini *.chu *.ids *.spl
+EXTRA_DIST = *.2da *.bmp *.ini *.chu *.ids *.spl *.pro
