--- a/gemrb/override/bg2/Makefile.am
+++ b/gemrb/override/bg2/Makefile.am
@@ -1,3 +1,3 @@
-bg2override_DATA = *.2da *.ini *.chu *.ids *.vvc *.spl
+bg2override_DATA = *.2da *.ini *.chu *.ids *.vvc *.spl *.pro
 bg2overridedir = $(moddir)/override/bg2/
-EXTRA_DIST = *.2da *.ini *.chu *.ids *.vvc *.spl
+EXTRA_DIST = *.2da *.ini *.chu *.ids *.vvc *.spl *.pro
