iwd2: added *.pro to the override Makefile.am
svn-id: r6749

--- a/gemrb/override/iwd2/Makefile.am
+++ b/gemrb/override/iwd2/Makefile.am
@@ -1,3 +1,3 @@
-iwd2override_DATA = *.2da *.ini *.chu *.ids *.spl
+iwd2override_DATA = *.2da *.ini *.chu *.ids *.spl *.pro
 iwd2overridedir = $(moddir)/override/iwd2/
-EXTRA_DIST = *.2da *.ini *.chu *.ids *.spl
+EXTRA_DIST = *.2da *.ini *.chu *.ids *.spl *.pro
