fix compilation (with cmake) on OS X, patch by hanicka
svn-id: r6924

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,6 +113,11 @@ ELSE(VORBIS_LIBRARY)
  SET(VORBIS_LIBRARY "")
 ENDIF(VORBIS_LIBRARY)
 
+IF(APPLE)
+ FIND_LIBRARY(SDL_MAIN_LIBRARY_PATH SDLmain)
+ FIND_LIBRARY(COCOA_LIBRARY_PATH Cocoa)
+ENDIF(APPLE)
+
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/cmake_config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
 #Plugin addition macro
@@ -121,6 +126,9 @@ ADD_LIBRARY(${plugin_name} MODULE ${ARGN})
 IF(WIN32)
  TARGET_LINK_LIBRARIES(${plugin_name} gemrb_core)
 ENDIF(WIN32)
+IF(APPLE)
+ TARGET_LINK_LIBRARIES(${plugin_name} gemrb_core)
+ENDIF(APPLE)
 ENDMACRO(ADD_GEMRB_PLUGIN)
 
 #gemrb overrides macro
