--- a/gemrb/CMakeLists.txt
+++ b/gemrb/CMakeLists.txt
@@ -6,8 +6,12 @@ ADD_EXECUTABLE(gemrb GemRB.cpp )
 IF(WIN32)
  TARGET_LINK_LIBRARIES(gemrb gemrb_core)
 ELSE(WIN32)
- TARGET_LINK_LIBRARIES(gemrb gemrb_core ${DLD_LIBRARY_PATH})
  SET_TARGET_PROPERTIES(gemrb PROPERTIES INSTALL_RPATH ${PLUGIN_INSTALL_DIR})
+ IF(APPLE)
+  TARGET_LINK_LIBRARIES(gemrb gemrb_core ${SDL_LIBRARY} ${SDL_MAIN_LIBRARY_PATH} ${COCOA_LIBRARY_PATH} ${DLD_LIBRARY_PATH})
+ ELSE(APPLE)
+  TARGET_LINK_LIBRARIES(gemrb gemrb_core ${DLD_LIBRARY_PATH})
+ ENDIF(APPLE)
 ENDIF(WIN32)
 
 INSTALL( TARGETS gemrb DESTINATION ${CMAKE_INSTALL_PREFIX})
