GemRB.cfg.subdir.sample: changed the gametype to bg2, tob is obsolete
svn-id: r6977

--- a/gemrb/GemRB.cfg.subdir.sample
+++ b/gemrb/GemRB.cfg.subdir.sample
@@ -36,7 +36,7 @@
 #                                                   #
 #####################################################
 
-GameType=tob
+GameType=bg2
 
 #####################################################
 #  Game Name [String] Title for GemRB window, use   #
