--- a/gemrb/Makefile.am
+++ b/gemrb/Makefile.am
@@ -5,7 +5,7 @@ gemrb_SOURCES = GemRB.cpp
 gemrb_LDADD =  ./plugins/Core/libgemrb_core.la
 
 SUBDIRS = plugins includes GUIScripts override docs
-EXTRA_DIST = GemRB.cfg* plugins-prepare.sh
+EXTRA_DIST = GemRB.cfg* plugins-prepare.sh CMakeLists.txt
 INCLUDES= \
 	$(all_includes) \
 	$(PYTHON_INCLUDES)
