--- a/gemrb/GUIScripts/Makefile.am
+++ b/gemrb/GUIScripts/Makefile.am
@@ -2,6 +2,6 @@ SUBDIRS = bg1 bg2 iwd iwd2 pst test1
 
 guiscript_DATA = *.py
 guiscriptdir = $(moddir)/GUIScripts/
-EXTRA_DIST = *.py
+EXTRA_DIST = *.py CMakeLists.txt */CMakeLists.txt
 MOSTLYCLEANFILES = *.pyc
 
