--- a/gemrb/override/pst/Makefile.am
+++ b/gemrb/override/pst/Makefile.am
@@ -1,3 +1,3 @@
-pstoverride_DATA = *.2da *.bmp *.ini *.chu *.ids *.bcs *.spl *.pro
+pstoverride_DATA = *.2da *.bmp *.ini *.chu *.ids *.bcs *.pro
 pstoverridedir = $(moddir)/override/pst/
-EXTRA_DIST = *.2da *.bmp *.ini *.chu *.ids *.bcs *.spl *.pro
+EXTRA_DIST = *.2da *.bmp *.ini *.chu *.ids *.bcs *.pro
