--- a/gemrb/override/shared/Makefile.am
+++ b/gemrb/override/shared/Makefile.am
@@ -1,3 +1,3 @@
-sharedoverride_DATA = *.2da *.ini *.chu *.ids *.vvc *.spl *.pro
+sharedoverride_DATA = *.2da *.ids *.spl *.pro
 sharedoverridedir = $(moddir)/override/shared/
-EXTRA_DIST = *.2da *.ini *.chu *.ids *.vvc *.spl *.pro
+EXTRA_DIST = *.2da *.ids *.spl *.pro
