GF_IWD_DEATHVARFORMAT -> GF_IWD2_DEATHVARFORMAT, used only in iwd2, which is _DEAD%s
svn-id: r7323

--- a/gemrb/override/iwd2/gemrb.ini
+++ b/gemrb/override/iwd2/gemrb.ini
@@ -78,7 +78,7 @@ MagicBit = 1
 ChallengeRating = 1
 DeathOnZeroStat = 0
 SpawnIni = 1
-IWDDeathVarFormat = 1
+IWD2DeathVarFormat = 1
 OverrideCursorPos = 1
 EnhancedEffects = 1
 BreakableWeapons = 0
