added BIKPlayer code (still broken)
svn-id: r7444

--- a/gemrb/plugins/CMakeLists.txt
+++ b/gemrb/plugins/CMakeLists.txt
@@ -4,6 +4,7 @@ ADD_SUBDIRECTORY( ACMImporter )
 ADD_SUBDIRECTORY( AREImporter )
 ADD_SUBDIRECTORY( BAMImporter )
 ADD_SUBDIRECTORY( BIFImporter )
+ADD_SUBDIRECTORY( BIKPlayer )
 ADD_SUBDIRECTORY( BMPImporter )
 ADD_SUBDIRECTORY( CHUImporter )
 ADD_SUBDIRECTORY( CREImporter )
