BMPImporter: Split off BMPWriter.
Only BMPImporter supported writing images.

Signed-off-by: Tom Prince <tom.prince@ualberta.net>

--- a/configure.in
+++ b/configure.in
@@ -237,6 +237,7 @@ gemrb/plugins/BAMImporter/Makefile
 gemrb/plugins/BIFImporter/Makefile 
 gemrb/plugins/BIKPlayer/Makefile
 gemrb/plugins/BMPImporter/Makefile 
+gemrb/plugins/BMPWriter/Makefile
 gemrb/plugins/PNGImporter/Makefile 
 gemrb/plugins/CHUImporter/Makefile 
 gemrb/plugins/CREImporter/Makefile 
