--- a/gemrb/plugins/CMakeLists.txt
+++ b/gemrb/plugins/CMakeLists.txt
@@ -6,6 +6,7 @@ ADD_SUBDIRECTORY( BAMImporter )
 ADD_SUBDIRECTORY( BIFImporter )
 ADD_SUBDIRECTORY( BIKPlayer )
 ADD_SUBDIRECTORY( BMPImporter )
+ADD_SUBDIRECTORY( BMPWriter )
 ADD_SUBDIRECTORY( CHUImporter )
 ADD_SUBDIRECTORY( CREImporter )
 ADD_SUBDIRECTORY( DLGImporter )
