Add flexible plugin handling of resource files.
So far, only Images are implemented.

svn-id: r7479

--- a/gemrb/plugins/Core/Makefile.am
+++ b/gemrb/plugins/Core/Makefile.am
@@ -44,6 +44,8 @@ libgemrb_core_la_SOURCES = \
 	SymbolMgr.cpp \
 	StringMgr.cpp \
 	Sprite2D.cpp \
+	Resource.cpp \
+	ResourceDesc.cpp \
 	ResourceMgr.cpp \
 	Region.cpp \
 	PluginMgr.cpp \
